[gd_scene load_steps=38 format=2]

[ext_resource path="res://resources/control_buttons/Fast-forward-thin-outlined-symbol-in-circular-button.svg" type="Texture" id=1]
[ext_resource path="res://resources/control_buttons/Pause-thin-rounded-button.svg" type="Texture" id=2]
[ext_resource path="res://resources/control_buttons/Play-rounded-button-outline.svg" type="Texture" id=3]
[ext_resource path="res://Dash.gd" type="Script" id=4]
[ext_resource path="res://resources/map/Bayern.png" type="Texture" id=5]
[ext_resource path="res://resources/map/Bayern_pressed.png" type="Texture" id=6]
[ext_resource path="res://resources/map/Baden-Württemberg.png" type="Texture" id=7]
[ext_resource path="res://resources/map/BaWu_pressed.png" type="Texture" id=8]
[ext_resource path="res://resources/map/Berlin_pressed.png" type="Texture" id=9]
[ext_resource path="res://resources/map/Berlin.png" type="Texture" id=10]
[ext_resource path="res://resources/Deutschland_Lage_Berlins.svg" type="Texture" id=11]
[ext_resource path="res://resources/map/Brandenburg_pressed.png" type="Texture" id=12]
[ext_resource path="res://resources/map/Brandenburg.png" type="Texture" id=13]
[ext_resource path="res://resources/map/Hamburg_pressed.png" type="Texture" id=14]
[ext_resource path="res://resources/map/Nordrhein-Westfalen.png" type="Texture" id=15]
[ext_resource path="res://resources/map/Hessen.png" type="Texture" id=16]
[ext_resource path="res://resources/map/Hessen_pressed.png" type="Texture" id=17]
[ext_resource path="res://resources/map/Hamburg.png" type="Texture" id=18]
[ext_resource path="res://resources/map/Bremen.png" type="Texture" id=19]
[ext_resource path="res://resources/map/MeckPom_pressed.png" type="Texture" id=20]
[ext_resource path="res://resources/map/Bremen_pressed.png" type="Texture" id=21]
[ext_resource path="res://resources/map/Niedersachsen.png" type="Texture" id=22]
[ext_resource path="res://resources/map/Rlp_pressed.png" type="Texture" id=23]
[ext_resource path="res://resources/map/Thüringen.png" type="Texture" id=24]
[ext_resource path="res://resources/map/Nrw_pressed.png" type="Texture" id=25]
[ext_resource path="res://resources/map/Saarland.png" type="Texture" id=26]
[ext_resource path="res://resources/map/Mecklenburg-Vorpommern.png" type="Texture" id=27]
[ext_resource path="res://resources/map/Saarland_pressed.png" type="Texture" id=28]
[ext_resource path="res://resources/map/Niedersachsen_pressed.png" type="Texture" id=29]
[ext_resource path="res://resources/map/Rheinland-Pfalz.png" type="Texture" id=30]
[ext_resource path="res://resources/map/Sachsen_pressed.png" type="Texture" id=31]
[ext_resource path="res://resources/map/Sachsen.png" type="Texture" id=32]
[ext_resource path="res://resources/map/Thuringen_pressed.png" type="Texture" id=33]
[ext_resource path="res://resources/map/SachsenAnhalt_pressed.png" type="Texture" id=34]
[ext_resource path="res://resources/map/Schleswig-Holstein.png" type="Texture" id=35]
[ext_resource path="res://resources/map/Sachsen-Anhalt.png" type="Texture" id=36]
[ext_resource path="res://resources/map/SchlHol_pressed.png" type="Texture" id=37]

[node name="Panel" type="Panel"]
margin_left = 1.0
margin_right = 1281.0
margin_bottom = 720.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 622.0
margin_top = 241.0
margin_right = 756.0
margin_bottom = 347.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Timer" parent="."]

[node name="Pause" type="Button" parent="."]
margin_left = 10.0
margin_top = 639.0
margin_right = 90.0
margin_bottom = 719.0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 106.0
margin_top = 638.0
margin_right = 186.0
margin_bottom = 718.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySpeedx2" type="Button" parent="."]
margin_left = 206.0
margin_top = 638.0
margin_right = 286.0
margin_bottom = 718.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Panel" parent="."]
margin_left = 676.74
margin_top = 13.4319
margin_right = 1267.74
margin_bottom = 813.432
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Map"]
visible = false
margin_right = 591.0
margin_bottom = 800.0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BayernButton" type="TextureButton" parent="Map"]
margin_left = 201.0
margin_top = 464.0
margin_right = 527.0
margin_bottom = 800.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaWuButton" type="TextureButton" parent="Map"]
margin_left = 95.0
margin_top = 542.0
margin_right = 300.0
margin_bottom = 770.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="BerlinButton" type="TextureButton" parent="Map"]
margin_left = 460.687
margin_top = 241.105
margin_right = 500.687
margin_bottom = 281.105
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )

[node name="BrandenburgButton" type="TextureButton" parent="Map"]
margin_left = 345.68
margin_top = 150.22
margin_right = 569.68
margin_bottom = 374.22
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )

[node name="BremenButton" type="TextureButton" parent="Map"]
margin_left = 175.3
margin_top = 149.546
margin_right = 215.3
margin_bottom = 209.546
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )

[node name="HamburgButton" type="TextureButton" parent="Map"]
margin_left = 250.709
margin_top = 136.925
margin_right = 290.709
margin_bottom = 176.925
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HessenButton" type="TextureButton" parent="Map"]
margin_left = 121.02
margin_top = 350.646
margin_right = 282.02
margin_bottom = 580.646
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )

[node name="MeckPomButton" type="TextureButton" parent="Map"]
margin_left = 304.622
margin_top = 34.6166
margin_right = 536.622
margin_bottom = 198.617
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 20 )

[node name="NiedersachsenButton" type="TextureButton" parent="Map"]
margin_left = 61.4833
margin_top = 120.569
margin_right = 365.483
margin_bottom = 386.569
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 29 )

[node name="NrwButton" type="TextureButton" parent="Map"]
margin_left = 1.26994
margin_top = 261.053
margin_right = 231.27
margin_bottom = 479.053
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 25 )

[node name="RlpButton" type="TextureButton" parent="Map"]
margin_left = 11.4431
margin_top = 421.938
margin_right = 167.443
margin_bottom = 623.938
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 23 )

[node name="SaarlandButton" type="TextureButton" parent="Map"]
margin_left = 24.9633
margin_top = 553.6
margin_right = 91.9633
margin_bottom = 606.6
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 28 )

[node name="SachsenButton" type="TextureButton" parent="Map"]
margin_left = 390.079
margin_top = 346.645
margin_right = 591.079
margin_bottom = 499.645
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 31 )

[node name="SachsenAnhaltButton" type="TextureButton" parent="Map"]
margin_left = 304.389
margin_top = 207.59
margin_right = 470.389
margin_bottom = 420.59
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 34 )

[node name="SchlHolButton" type="TextureButton" parent="Map"]
margin_left = 140.43
margin_top = 0.543594
margin_right = 345.43
margin_bottom = 174.544
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThuringenButton" type="TextureButton" parent="Map"]
margin_left = 260.381
margin_top = 351.891
margin_right = 438.381
margin_bottom = 497.891
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 33 )
